name:                monthly-missions
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/monthly-missions#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BattleCats.MonthlyMissions.Types
                     , BattleCats.MonthlyMissions.Lib
                     , Data.List.NonEmpty.Utils
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , text
                     , sqlite-simple
  default-language:    Haskell2010

executable monthly-missions
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monthly-missions
                     , text
                     , sqlite-simple
  default-language:    Haskell2010

test-suite monthly-missions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , monthly-missions
                     , hspec
                     , QuickCheck
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/monthly-missions
