name:                monthly-missions
version:             0.1.0.0
synopsis:            Find the most energy efficient stages for your monthly challenges
description:         Manually find the stages that contain the enemies can be a very time consuming task
                     This tool can find your enemies very quickly
                     You might even find multiple enemies in one stage
                     Also prints an enemy icon if you don't know the names
                     It shows when enemy will appear to avoid clearing the stage too quickly
homepage:            https://github.com/stevemao/monthly-missions#readme
license:             BSD3
license-file:        LICENSE
author:              Steve Mao
maintainer:          example@example.com
copyright:           2021 Steve Mao
category:            Battle Cats tool
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     BattleCats.MonthlyMissions.Types
                     , BattleCats.MonthlyMissions.Lib
                     , Data.List.NonEmpty.Utils
                     , BattleCats.Image
                     , ITerm2.ANSI.Image
  ghc-options:         -Wall
  build-depends:       base >= 4.7 && < 5
                     , text
                     , sqlite-simple
                     , bytestring
                     , base64
                     , directory
                     , microlens-platform
                     , text-show
  default-language:    Haskell2010

executable monthly-missions
  hs-source-dirs:      app
  other-modules:       Paths_monthly_missions
  main-is:             Main.hs
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , monthly-missions
                     , pretty-simple
                     , bytestring
                     , cmdargs
                     , text
  default-language:    Haskell2010

test-suite monthly-missions-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  other-modules:       BattleCats.MonthlyMissions.LibSpec
                     , BattleCats.MonthlyMissions.TypesSpec
                     , Data.List.NonEmpty.UtilsSpec
  main-is:             Spec.hs
  build-depends:       base
                     , monthly-missions
                     , hspec
                     , QuickCheck
                     , quickcheck-instances
                     , safe
                     , text
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stevemao/monthly-missions
